# protobufTest3

./: CMakeLists.txt  main.cpp
messages/: CMakeLists.txt  MessageProcessor.cpp  MessageProcessor.h
messages/proto/: logonMessage.proto
